--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+   
     "target": "es5",
     "lib": [
       "dom",
@@ -22,5 +23,8 @@
   },
   "include": [
     "src"
-  ]
+  ], 
+  "paths": {
+    "path": false
+  },
 }
